--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ notebooks/python_imred_data
 notebooks/reduced
 notebooks/converted
 notebooks/path
+notebooks/example-thermo-electric
+notebooks/example1-reduced
+notebooks/example2-reduced
+notebooks/example3-reduced
