--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ notebooks/example-thermo-electric
 notebooks/example1-reduced
 notebooks/example2-reduced
 notebooks/example3-reduced
+notebooks/example-cryo-LFC
