--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ notebooks/example1-reduced
 notebooks/example2-reduced
 notebooks/example3-reduced
 notebooks/example-cryo-LFC
+notebooks/2018-07-23
+notebooks/all_data
+notebooks/sky_flat_good_raw
+notebooks/sky_flat_good_working
