--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ execute:
   execute_notebooks         : force  # Whether to execute notebooks at build time. Must be one of ("auto", "force", "cache", "off")
   cache                     : ""  # A path to the jupyter cache that will be used to store execution artifacs. Defaults to `_build/.jupyter_cache/`
   exclude_patterns          : ["*07-*.ipynb", "*/photometry/*", "*add_style_cell.ipynb*"]  # A list of patterns to *skip* in execution (e.g. a notebook that takes a really long time)
+  timeout                   : 300    # The maximum time (in seconds) each notebook cell is allowed to run.
 
 #######################################################################################
 # HTML-specific settings
