--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -66,16 +66,15 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - name: Set up python ${{ matrix.python }} on ${{ matrix.os }}
-      uses: actions/setup-python@v2
+    - name: Setup Miniconda
+      uses: conda-incubator/setup-miniconda@v2.0.1
       with:
         python-version: ${{ matrix.python }}
+        auto-update-conda: true
     - name: Install base dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install astropy numpy cython
-        python -m pip install --no-binary :all: astroscrappy
-        python -m pip install jupyter-book astroquery ccdproc photutils
+        conda install -c conda-forge astroquery ccdproc photutils
+        python -m pip install jupyter-book
         python -m pip install sphinxcontrib-bibtex==1
     - name: Build book
       run: |
