--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -74,7 +74,7 @@ jobs:
     - name: Install base dependencies
       run: |
         conda install -c conda-forge astroquery ccdproc photutils sphinx sphinxcontrib-bibtex
-        python -m pip install jupyter-book
+        python -m pip install jupyter-book==0.9.1
     - name: Build book
       run: |
         jb build .
