--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -72,10 +72,14 @@ jobs:
         python-version: ${{ matrix.python }}
         auto-update-conda: true
     - name: Install base dependencies
+      shell: bash -l {0}
       run: |
         conda install -c conda-forge astroquery ccdproc photutils sphinx sphinxcontrib-bibtex
+        conda list
+        conda info -e
         python -m pip install jupyter-book==0.9.1
     - name: Build book
+      shell: bash -l {0}
       run: |
         jb build .
     # This is an example of how to upload coverage to codecov
