Allow builds on main branch and slim down workflow

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -7,7 +7,7 @@ name: CI Tests
 on:
   push:
     branches:
-  #  - master  # GitHub now defaults to 'main' as the name of the primary branch. Change this as needed.
+      - master  # GitHub now defaults to 'main' as the name of the primary branch. Change this as needed.
   #  tags: # run CI if specific tags are pushed
   pull_request:
     # branches: # only build on PRs against 'main' if you need to further limit when CI is run.
@@ -22,44 +22,9 @@ jobs:
     strategy:
       matrix:
         include:
-          # - name: Code style checks
-          #   os: ubuntu-latest
-          #   python: 3.x
-          #   toxenv: codestyle
-
-          # - name: Python 3.7 with minimal dependencies
-          #   os: ubuntu-latest
-          #   python: 3.7
-          #   toxenv: py37-test
-
-          - name: Python 3.8 with all optional dependencies, coverage checking and remote data
+          - name: Build book
             os: ubuntu-latest
             python: 3.8
-
-          # - name: OS X - Python 3.8 with all optional dependencies
-          #   os: macos-latest
-          #   python: 3.8
-          #   toxenv: py38-test-alldeps
-
-          # - name: Windows - Python 3.8 with all optional dependencies
-          #   os: windows-latest
-          #   python: 3.8
-          #   toxenv: py38-test-alldeps
-
-          # - name: Python 3.7 with oldest supported version of all dependencies
-          #   os: ubuntu-16.04
-          #   python: 3.7
-          #   toxenv: py37-test-oldestdeps
-
-          # - name: Python 3.8 with latest dev versions of key dependencies
-          #   os: ubuntu-latest
-          #   python: 3.8
-          #   toxenv: py38-test-devdeps
-
-          # - name: Test building of Sphinx docs
-          #   os: ubuntu-latest
-          #   python: 3.x
-          #   toxenv: build_docs
 
     steps:
     - name: Checkout code
@@ -107,10 +72,3 @@ jobs:
         name: rendered-book
         path: |
           _build/html
-
-    # This is an example of how to upload coverage to codecov
-    # - name: Upload coverage to codecov
-    #   if: "contains(matrix.toxenv, '-cov')"
-    #   uses: codecov/codecov-action@v1
-    #   with:
-    #     file: ./coverage.xml
