Add version number to navbar

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,10 @@ html:
   use_edit_page_button      : true  # Whether to add an "edit this page" button to pages. If `true`, repository information in repository: must be filled in
   use_repository_button     : false  # Whether to add a link to your repository button
   use_issues_button         : true  # Whether to add an "open an issue" button
-  extra_navbar              : Powered by <a href="https://jupyterbook.org">Jupyter Book</a> and <a href="https://astropy.org">Astropy</a>  # Will be displayed underneath the left navbar.
+  extra_navbar              : |     # Will be displayed underneath the left navbar.
+    <strong>Book edition 2.0.dev</strong></br>
+    Powered by <a href="https://jupyterbook.org">Jupyter Book</a> and
+    <a href="https://astropy.org">Astropy</a>
   extra_footer              : ""  # Will be displayed underneath the footer.
   google_analytics_id       : ""  # A GA id that can be used to track book views.
   home_page_in_navbar       : true  # Whether to include your home page in the left Navigation Bar
