--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #######################################################################################
 # A default configuration that will be loaded for all jupyter books
 # Users are expected to override these values in their own `_config.yml` file.
-# This is also the "main list" of all allowed keys and values.
+# This is also the "full list" of all allowed keys and values.
 
 #######################################################################################
 # Book settings
