--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Install base dependencies
       shell: bash -l {0}
       run: |
-        conda install -c conda-forge astroquery ccdproc photutils sphinx sphinxcontrib-bibtex
+        conda install --quiet -c conda-forge astroquery ccdproc photutils sphinx sphinxcontrib-bibtex
         conda list
         conda info -e
         python -m pip install jupyter-book==0.9.1
@@ -69,6 +69,23 @@ jobs:
     - name: Upload HTML
       uses: actions/upload-artifact@v2
       with:
-        name: rendered-book
+        name: rendered-book-sha-${{ github.sha }}
         path: |
           _build/html
+
+  deploy_html:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: ci_tests
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: rendered-book-sha-${{ github.sha }}
+          path: dev
+      - name: Deploy pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: dev
