--- a/_toc.yml
+++ b/_toc.yml
@@ -1,126 +1,74 @@
-# This file contains the order and numbering for all sections in the book.
-#
-# It is a sample TOC file to help you get started. Fill it out with entries
-# for your own content.
-#
-# Each entry has the following schema:
-#
-# - title: mytitle   # Title of chapter or section
-#   path: /myurl  # URL of section relative to the /notebooks/ folder.
-#   sections:  # Contains a list of more entries that make up the chapter's sections
-#   not_numbered: true  # if the section shouldn't have a number in the sidebar
-#     (e.g. Introduction or appendices)
-#   expand_sections: true  # OPTION WAS REMOVED
-#   external: true  # Whether the URL is an external link or points to content in the book
-#
-# Below are some special values that trigger specific behavior:
-# - search: true  # Will provide a link to a search page
-# - divider: true  # Will insert a divider in the sidebar
-# - header: My Header  # Will insert a header with no link in the sidebar
-#
-# See the links below for an example.
-
-# Top-level page
-- file: notebooks/00-00-Preface.ipynb
-  title: Home
+format: jb-book
+root: notebooks/00-00-Preface.ipynb
+title: Home
+defaults:
   numbered: true
-
-# Adds a searchbar link
-# - title: Search
-#   search: true
-
-# Divider for meta-pages and content page
-# - divider: true
-
-# Add a header and sample content section
-# - header: CCD Data Reduction Guide
-
-# A chapter w/ a collection of sections beneath it
-- file: notebooks/01-00-Understanding-an-astronomical-CCD-image
-  title: Astronomical Images
-  # expand_sections: true
-  sections:
-    - title: Components of astronomical images
-      file: notebooks/01-01-astronomical-CCD-image-components
-    - title: An artificial, but realistic, image
-      file: notebooks/01-03-Construction-of-an-artificial-but-realistic-image
-    - title: Non-uniform sensitivity in astronomical detectors
-      file: notebooks/01-04-Nonuniform-sensitivity
-    - title: Calibration overview
-      file: notebooks/01-05-Calibration-overview
-    - title: Image combination
-      file: notebooks/01-06-Image-combination
-    - title: Overscan
-      file: notebooks/01-08-Overscan
-    - title: Calibration choices to make
-      file: notebooks/01-09-Calibration-choices-you-need-to-make
-    - title: Reading images
-      file: notebooks/01-11-reading-images
-
-# A chapter w/ a collection of sections beneath it
-- file: notebooks/02-00-Handling-overscan-trimming-and-bias-subtraction
-  title: Overscan and bias images
-  # expand_sections: true
-  sections:
-    - title: About bias and overscan
-      file: notebooks/02-01-overscan-trimming-and-bias-subtraction-background
-    - title: Calibrating bias images
-      file: notebooks/02-02-Calibrating-bias-images
-    - title: Combine bias images to make master bias
-      file: notebooks/02-04-Combine-bias-images-to-make-master
-
-# A chapter w/ a collection of sections beneath it
-- file: notebooks/03-00-Dark-current-and-hot-pixels
-  title: Dark current and dark frames
-  # expand_sections: true
-  sections:
-    - title: 'Dark current: the ideal case'
-      file: notebooks/03-01-Dark-current-The-ideal-case
-    - title: 'Real dark current: noise and other artifacts'
-      file: notebooks/03-02-Real-dark-current-noise-and-other-artifacts
-    - title: Handling overscan and bias for dark frames
-      file: notebooks/03-04-Handling-overscan-and-bias-for-dark-frames
-    - title: Calibrate dark images
-      file: notebooks/03-05-Calibrate-dark-images
-    - title: Combine calibrated dark images for use in later reduction steps
-      file: notebooks/03-06-Combine-darks-for-use-in-later-calibration-steps
-
-
-- file: notebooks/05-00-Flat-corrections
-  title: Flat fielding
-  # expand_sections: true
-  sections:
-    - title: Calibrating flat frames
-      file: notebooks/05-01-about-flat-corrections
-    - title: Calibrating flat frames
-      file: notebooks/05-03-Calibrating-the-flats
-    - title: Combining flat frames
-      file: notebooks/05-04-Combining-flats
-
-- file: notebooks/06-00-Reducing-science-images
-  title: Calibrating science images
-  sections:
-    - title: Two calibration examples
-      file: notebooks/06-03-science-images-calibration-examples
-
-- file: notebooks/08-00-Image-masking
-  title: Finding and dealing with bad pixels
-  # expand_sections: true
-  sections:
-    - title: Identifying hot pixels
-      file: notebooks/08-01-Identifying-hot-pixels
-    - title: Identifying bad pixels with ccdmask
-      file: notebooks/08-02-Creating-a-mask
-    - title: Removing cosmic rays
-      file: notebooks/08-03-Cosmic-ray-removal
-    - title: Incorporating masks in science images
-      file: notebooks/08-05-incorporating-masks-into-calibrated-science-images
-
-# Divider for meta-pages and content page
-# - divider: true
-
-# External link
-- title: GitHub repository
-  url: https://github.com/mwcraig/ccd-reduction-and-photometry-guide
-  # external: true
-  numbered: false
+chapters:
+  - file: notebooks/01-00-Understanding-an-astronomical-CCD-image
+    title: Astronomical Images
+    sections:
+    - file: notebooks/01-01-astronomical-CCD-image-components
+      title: Components of astronomical images
+    - file: notebooks/01-03-Construction-of-an-artificial-but-realistic-image
+      title: An artificial, but realistic, image
+    - file: notebooks/01-04-Nonuniform-sensitivity
+      title: Non-uniform sensitivity in astronomical detectors
+    - file: notebooks/01-05-Calibration-overview
+      title: Calibration overview
+    - file: notebooks/01-06-Image-combination
+      title: Image combination
+    - file: notebooks/01-08-Overscan
+      title: Overscan
+    - file: notebooks/01-09-Calibration-choices-you-need-to-make
+      title: Calibration choices to make
+    - file: notebooks/01-11-reading-images
+      title: Reading images
+  - file: notebooks/02-00-Handling-overscan-trimming-and-bias-subtraction
+    title: Overscan and bias images
+    sections:
+    - file: notebooks/02-01-overscan-trimming-and-bias-subtraction-background
+      title: About bias and overscan
+    - file: notebooks/02-02-Calibrating-bias-images
+      title: Calibrating bias images
+    - file: notebooks/02-04-Combine-bias-images-to-make-master
+      title: Combine bias images to make master bias
+  - file: notebooks/03-00-Dark-current-and-hot-pixels
+    title: Dark current and dark frames
+    sections:
+    - file: notebooks/03-01-Dark-current-The-ideal-case
+      title: 'Dark current: the ideal case'
+    - file: notebooks/03-02-Real-dark-current-noise-and-other-artifacts
+      title: 'Real dark current: noise and other artifacts'
+    - file: notebooks/03-04-Handling-overscan-and-bias-for-dark-frames
+      title: Handling overscan and bias for dark frames
+    - file: notebooks/03-05-Calibrate-dark-images
+      title: Calibrate dark images
+    - file: notebooks/03-06-Combine-darks-for-use-in-later-calibration-steps
+      title: Combine calibrated dark images for use in later reduction steps
+  - file: notebooks/05-00-Flat-corrections
+    title: Flat fielding
+    sections:
+    - file: notebooks/05-01-about-flat-corrections
+      title: Calibrating flat frames
+    - file: notebooks/05-03-Calibrating-the-flats
+      title: Calibrating flat frames
+    - file: notebooks/05-04-Combining-flats
+      title: Combining flat frames
+  - file: notebooks/06-00-Reducing-science-images
+    title: Calibrating science images
+    sections:
+    - file: notebooks/06-03-science-images-calibration-examples
+      title: Two calibration examples
+  - file: notebooks/08-00-Image-masking
+    title: Finding and dealing with bad pixels
+    sections:
+    - file: notebooks/08-01-Identifying-hot-pixels
+      title: Identifying hot pixels
+    - file: notebooks/08-02-Creating-a-mask
+      title: Identifying bad pixels with ccdmask
+    - file: notebooks/08-03-Cosmic-ray-removal
+      title: Removing cosmic rays
+    - file: notebooks/08-05-incorporating-masks-into-calibrated-science-images
+      title: Incorporating masks in science images
+# - url: https://github.com/mwcraig/ccd-reduction-and-photometry-guide
+#   title: GitHub repository
