--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -8,10 +8,11 @@ on:
   push:
     branches:
       - main  # GitHub now defaults to 'main' as the name of the primary branch. Change this as needed.
-  #  tags: # run CI if specific tags are pushed
+    tags: # run CI if specific tags are pushed
+      - '[0-9]+.[0-9]+.[0-9]+[a-z0-9]*'
   pull_request:
-    # branches: # only build on PRs against 'main' if you need to further limit when CI is run.
-    #    - main
+    branches: # only build on PRs against 'main' if you need to further limit when CI is run.
+       - main
 
 jobs:
   # Github Actions supports ubuntu, windows, and macos virtual environments:
@@ -77,8 +78,13 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     needs: ci_tests
-    if: github.ref == 'refs/heads/main'
+    if: ${{ github.ref == 'refs/heads/main' || contains(github.ref, 'tags') }}
     steps:
+      - name: Set version number
+        run: |
+          VERSION_NUMBER=${GITHUB_REF#refs/tags/}
+          if [[ ${{ github.ref }} == 'refs/head/main' ]]; then VERSION_NUMBER=dev; fi
+          echo "VERSION_NUMBER=$VERSION_NUMBER" >> $GITHUB_ENV
       - name: Download artifact
         uses: actions/download-artifact@v2
         with:
@@ -89,4 +95,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: dev
-          destination_dir: v/dev
+          destination_dir: v/${{ env.VERSION_NUMBER }}
