Allow for use of random seed taken from environment
The goal here is to remove image differences as much as possible to keep
the repository size down.

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -69,6 +69,7 @@ jobs:
     - name: Build book
       shell: bash -l {0}
       run: |
+        export GUIDE_RANDOM_SEED=4920385  # Use a seed to minimize changes in images
         jb build .
 
     - name: Upload HTML
