--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -15,7 +15,7 @@ on:
                                          # character.
       - '[0-9]+.[0-9]+.[0-9]+'  # actual releases.
   pull_request:
-    branches: # only build on PRs against 'main' if you need to further limit when CI is run.
+    branches: # only build on PRs against 'main'
        - main
 
 jobs:
