Install in one go

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -45,10 +45,9 @@ jobs:
       shell: bash -l {0}
       run: |
         conda install -c conda-forge mamba
-        mamba install --quiet -c conda-forge astroquery ccdproc photutils sphinx sphinxcontrib-bibtex
+        mamba install --quiet -c conda-forge astroquery ccdproc photutils sphinx sphinxcontrib-bibtex jupyter-book=0.12.1
         conda list
         conda info -e
-        mamba install --quiet -c conda-forge  "jupyter-book=0.12.1"
         # python -m pip install jupyter-book==0.12.1
     - name: Cache
       id: cache
