--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,11 @@ html:
   use_repository_button     : false  # Whether to add a link to your repository button
   use_issues_button         : true  # Whether to add an "open an issue" button
   extra_navbar              : |     # Will be displayed underneath the left navbar.
-    <h2>Book edition 2.0.0</h2></br>
+    <h2>Book edition: development</h2></br>
+    <h3>Previous editions</h3>
+    <ul>
+    <li><a href="v/2.0.0/index.html">2.0.0</a></li>
+    </ul>
     Powered by <a href="https://jupyterbook.org">Jupyter Book</a> and
     <a href="https://astropy.org">Astropy</a>
   extra_footer              : |  # Will be displayed underneath the footer.
