--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,10 @@ html:
   use_repository_button     : false  # Whether to add a link to your repository button
   use_issues_button         : true  # Whether to add an "open an issue" button
   extra_navbar              : |     # Will be displayed underneath the left navbar.
-    <h2>Book edition: 2.0.1rc1</h2>
+    <h2>Book edition: 2.0.1</h2>
     <strong>Previous editions</strong></br>
     <a href="../../../v/2.0.0/index.html">2.0.0</a></br>
+    <a href="../../../v/dev/index.html">dev (latest)</a></br>
     Powered by <a href="https://jupyterbook.org">Jupyter Book</a> and
     <a href="https://astropy.org">Astropy</a>
   extra_footer              : |  # Will be displayed underneath the footer.
