--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ launch_buttons:
 
 repository:
   url                       : https://github.com/astropy/ccd-reduction-and-photometry-guide  # The URL to your book's repository
-  path_to_book              : "notebooks"  # A path to your book's folder, relative to the repository root.
+  path_to_book              : ""  # A path to your book's folder, relative to the repository root.
   branch                    : main  # Which branch of the repository should be used when creating links
 
 #######################################################################################
