--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -83,7 +83,7 @@ jobs:
   deploy_html:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: ci_tests
+    needs: build_book
     if: ${{ github.ref == 'refs/heads/main' || contains(github.ref, 'tags') }}
     steps:
       - name: Set version number
