--- a/_toc.yml
+++ b/_toc.yml
@@ -79,10 +79,15 @@ parts:
       - file: notebooks/photometry/01.00-Source-detection.ipynb
         title: Source detection
         sections:
-        - file: notebooks/photometry/01.01-Background-removal-(for-source-detection).ipynb
-          title: Background
-        - file: notebooks/photometry/01.04-Background-estimation.ipynb
-          title: Background
+        - file: notebooks/photometry/01.01-Background-removal.ipynb
+          title: Background estimation
+          sections:
+          - file: notebooks/photometry/01.01.01-Background-removal-simulated-data.ipynb
+            title: Overview with simulated image
+          - file: notebooks/photometry/01.01.02-Background-estimation.ipynb
+            title: Handling images that need masking
+          - file: notebooks/photometry/01.01.03-Background-estimation-FEDER.ipynb
+            title: Removing a gradient
 
 # - url: https://github.com/mwcraig/ccd-reduction-and-photometry-guide
 #   title: GitHub repository
