--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -75,6 +75,8 @@ jobs:
       run: |
         export GUIDE_RANDOM_SEED=4920385  # Use a seed to minimize changes in images
         jb build .
+        # Workaround to enable utterances comments. See script for details.
+        python fix_jupyter_book_comments.py _build/html
 
     - name: Upload HTML
       uses: actions/upload-artifact@v4
@@ -87,12 +89,13 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     needs: build_book
-    if: ${{ github.ref == 'refs/heads/main' || contains(github.ref, 'tags') }}
+    if: ${{ github.ref == 'refs/heads/main' || contains(github.ref, 'tags') || github.ref == 'refs/heads/photometry-dev' }}
     steps:
       - name: Set version number
         run: |
           VERSION_NUMBER=${GITHUB_REF#refs/tags/}
           if [[ "${{ github.ref }}" == 'refs/heads/main' ]]; then VERSION_NUMBER=dev; fi
+          if [[ "${{ github.ref }}" == 'refs/heads/photometry-dev' ]]; then VERSION_NUMBER=pdev; fi
           echo "VERSION_NUMBER=$VERSION_NUMBER" >> $GITHUB_ENV
       - name: Download artifact
         uses: actions/download-artifact@v4
