Fix toc entries

--- a/_toc.yml
+++ b/_toc.yml
@@ -88,11 +88,13 @@ parts:
             title: Handling images that need masking
           - file: notebooks/photometry/01.01.03-Background-estimation-FEDER.ipynb
             title: Removing a gradient
-        - file: notebooks/photometry/01.02-IRAF-like-detection.ipynb
+        - file: notebooks/photometry/01.02-IRAF-like-photutils.ipynb
           title: IRAF-like source detection
           sections:
-          - file: notebooks/photometry/01.02.01-IRAF-like-detection-simulated-data.ipynb
+          - file: notebooks/photometry/01.02.01-IRAF-like-simulated-image.ipynb
             title: Overview with simulated image
+          - file: notebooks/photometry/01.02.02-IRAF-like-source-detection-XDF.ipynb
+            title: Detecting sources in the XDF
 
 
 # - url: https://github.com/mwcraig/ccd-reduction-and-photometry-guide
