--- a/_toc.yml
+++ b/_toc.yml
@@ -87,7 +87,7 @@ parts:
           - file: notebooks/photometry/01.01.02-Background-estimation-XDF.ipynb
             title: Handling images that need masking
           - file: notebooks/photometry/01.01.03-Background-estimation-FEDER.ipynb
-            title: Removing a gradient
+            title: Removing a gradient in a ground-based image
         - file: notebooks/photometry/01.02-IRAF-like-photutils.ipynb
           title: IRAF-like source detection
           sections:
@@ -95,6 +95,8 @@ parts:
             title: Overview with simulated image
           - file: notebooks/photometry/01.02.02-IRAF-like-source-detection-XDF.ipynb
             title: Detecting sources in the XDF
+          - file: notebooks/photometry/01.02.03-Source-detection-FEDER.ipynb
+            title: Detecting stellar sources in a ground-based image
 
 
 # - url: https://github.com/mwcraig/ccd-reduction-and-photometry-guide
