--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -37,14 +37,17 @@ jobs:
       uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
       with:
         fetch-depth: 0
+
     - name: Setup Miniconda
       uses: conda-incubator/setup-miniconda@d2e6a045a86077fb6cad6f5adf368e9076ddaa8d  # v3.1.0
       with:
-        python-version: ${{ matrix.python }}
-        mamba-version: "*"
-        channels: astropy, conda-forge, defaults
-        channel-priority: true
+        miniforge-version: latest
+        use-mamba: true
         auto-update-conda: true
+        channels: conda-forge
+        python-version: ${{ matrix.python }}
+        activate-environment: mamba
+
     - name: Install base dependencies
       shell: bash -l {0}
       run: |
@@ -53,6 +56,7 @@ jobs:
         python -m pip install lxml_html_clean
         conda info -e
         # python -m pip install jupyter-book==0.12.1
+
     - name: Cache
       id: cache
       uses: actions/cache@6849a6489940f00c2f30c0fb92c6274307ccb58a  # v4.1.2
@@ -88,18 +92,20 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     needs: build_book
-    if: ${{ github.ref == 'refs/heads/main' || contains(github.ref, 'tags') }}
+    if: ${{ github.event_name }} == 'push'
     steps:
       - name: Set version number
         run: |
           VERSION_NUMBER=${GITHUB_REF#refs/tags/}
           if [[ "${{ github.ref }}" == 'refs/heads/main' ]]; then VERSION_NUMBER=dev; fi
           echo "VERSION_NUMBER=$VERSION_NUMBER" >> $GITHUB_ENV
+
       - name: Download artifact
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16  # v4.1.8
         with:
           name: rendered-book-sha-${{ github.sha }}
           path: dev
+
       - name: Deploy pages
         uses: peaceiris/actions-gh-pages@4f9cc6602d3f66b9c108549d475ec49e8ef4d45e  # v4.0.0
         with:
