--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -8,7 +8,6 @@ on:
   push:
     branches:
       - main  # GitHub now defaults to 'main' as the name of the primary branch. Change this as needed.
-      - update-workflow-channel
     tags: # run CI if specific tags are pushed
       - '[0-9]+.[0-9]+.[0-9]+[a-z0-9]*'  # pre-releases -- note that brackets only
                                          # match single character, and that * does
@@ -92,7 +91,7 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     needs: build_book
-    if: ${{ github.event_name }} == 'push'
+    if: ${{ github.ref == 'refs/heads/main' || contains(github.ref, 'tags') }}
     steps:
       - name: Set version number
         run: |
